# distantreading

./: .gitignore  LICENSE  README.md  distantreading.cabal
app/: CLI.hs  Main.hs  Server.hs
src/: Lib.hs  Request.hs  Response.hs  SentenceStats.hs  StopWords.hs  Util.hs  WordStats.hs
