name:                distantreading
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kellyi/distantreading#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , split
                     , wreq
                     , lens
                     , bytestring
                     , text
  default-language:    Haskell2010

executable distantreading-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , split
                     , wreq
                     , lens
                     , bytestring
                     , distantreading
                     , text
  default-language:    Haskell2010

test-suite distantreading-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , distantreading
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kellyi/distantreading
